# Herald

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  default.nix  docker-compose.yml  docker_entry.sh  flake.nix
.github/workflows/: build.yml  check.yaml  rust.yaml  rust.yml
serde_kdlab_xprm/: Cargo.toml
serde_kdlab_xprm/src/: error.rs  lib.rs  ser.rs
src/: macros.rs  main.rs
src/http/: lobby.rs  mod.rs  utils.rs  ws.rs
src/http/middleware/: guard.rs  key_token.rs  mod.rs
src/lobby/: bridge_manager.rs  lobby_manager.rs  mod.rs  room.rs  room_info.rs
src/netconnection/: codec.rs  mod.rs  netconnection.rs
src/relay/: messages.rs  mod.rs  netconnection.rs  netconnection_codec.rs  netconnection_transport.rs  peer_relay.rs  session_manager.rs  utils.rs
src/utils/: mod.rs  time.rs  xprm.rs
