workspace = { members = [ "serde_kdlab_xprm" ] }

[package]
name = "herald"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-http = { version = "3", features = ["ws"] }
rustls = "0.23"
rustls-pemfile = "2.1"
actix-cors = "0"
log = "0"
env_logger = "0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_kdlab_xprm = { path = "serde_kdlab_xprm" }
dotenvy = "0.15"
validator = { version = "0.20", features = ["derive"] }
arc-swap = "1"
futures-util = { version = "0.3", features = ["sink"] }
pin-project-lite = "0.2"
num-traits = "0.2"
num-derive = "0.4"
